--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,55 @@
+# Node modules
+node_modules/
+
+# Build outputs
+dist/
+.build/
+out/
+
+# Vite cache
+.vite/
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Env files (variáveis sensíveis)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel/
+
+# Lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# System files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Coverage
+coverage/
+*.lcov
+
+# Optional: temporary files
+*.tmp
+*.temp
+*.swp
+
+# Optional: OS generated files
+*.bak
+*.orig
+
